libs/extractor/src/snapshots/extractor__tests__vanilla_extract_style_composition_multiple.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"multi-comp.css.ts\",\nr\"import { style } from '@devup-ui/react'\nconst base = style({ padding: 8 })\nexport const complex = style([base, { margin: 4 }, { color: 'blue' }])\n\",\nExtractOption\n{\n    package: \"@devup-ui/react\".to_string(), css_dir:\n    \"@devup-ui/react\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "color",
                value: "blue",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "margin",
                value: "4px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "padding",
                value: "8px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/react/devup-ui.css\";\nconst base = \"OLpadding-v8px\";\nexport const complex = \"OLpadding-v8px OLmargin-v4px OLcolor-vblue\";\n",
}
