libs/extractor/src/snapshots/extractor__tests__vanilla_extract_style_css_ts.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"styles.css.ts\",\nr#\"import { style } from '@devup-ui/react'\nexport const container: string = style({ background: \"red\", padding: 16 })\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/react\".to_string(), css_dir:\n    \"@devup-ui/react\".to_string(), single_css: true, import_main_css: false\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "background",
                value: "red",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "padding",
                value: "16px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/react/devup-ui.css\";\nexport const container = \"a b\";\n",
}
