libs/extractor/src/snapshots/extractor__tests__vanilla_extract_style_variants.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"variants.css.ts\",\nr\"import { styleVariants } from '@devup-ui/react'\nexport const background = styleVariants({\n  primary: { background: 'blue' },\n  secondary: { background: 'gray' },\n  danger: { background: 'red' }\n})\n\",\nExtractOption\n{\n    package: \"@devup-ui/react\".to_string(), css_dir:\n    \"@devup-ui/react\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "background",
                value: "blue",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "background",
                value: "gray",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "background",
                value: "red",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/react/devup-ui.css\";\nconst _ve0 = \"f0_0 a\";\nconst _ve1 = \"f0_1 b\";\nconst _ve2 = \"f0_2 c\";\nexport const background = {\n\t\"primary\": _ve0,\n\t\"secondary\": _ve1,\n\t\"danger\": _ve2\n};\n",
}
