libs/extractor/src/snapshots/extractor__tests__vanilla_extract_style_variants_with_base.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"variants-base.css.ts\",\nr\"import { style, styleVariants } from '@devup-ui/react'\nconst base = style({\n  padding: 8,\n  borderRadius: 4\n})\nexport const sizes = styleVariants({\n  small: [base, { fontSize: 12 }],\n  medium: [base, { fontSize: 16 }],\n  large: [base, { fontSize: 20 }]\n})\n\",\nExtractOption\n{\n    package: \"@devup-ui/react\".to_string(), css_dir:\n    \"@devup-ui/react\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "border-radius",
                value: "4px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "font-size",
                value: "12px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "font-size",
                value: "16px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "font-size",
                value: "20px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "padding",
                value: "8px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/react/devup-ui.css\";\nconst _ve1 = \"OLpadding-v8px OHc6lhuo7y4a8g6rxg OLfont_dsize-v12px\";\nconst _ve2 = \"OLpadding-v8px OHc6lhuo7y4a8g6rxg OLfont_dsize-v16px\";\nconst _ve3 = \"OLpadding-v8px OHc6lhuo7y4a8g6rxg OLfont_dsize-v20px\";\nconst base = \"OLpadding-v8px OHc6lhuo7y4a8g6rxg\";\nexport const sizes = {\n\t\"small\": _ve1,\n\t\"medium\": _ve2,\n\t\"large\": _ve3\n};\n",
}
