libs/extractor/src/snapshots/extractor__tests__vanilla_extract_supports.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"supports.css.ts\",\nr\"import { style } from '@devup-ui/react'\nexport const grid = style({\n  display: 'flex',\n  '@supports': {\n    '(display: grid)': {\n      display: 'grid'\n    }\n  }\n})\n\",\nExtractOption\n{\n    package: \"@devup-ui/react\".to_string(), css_dir:\n    \"@devup-ui/react\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "display",
                value: "flex",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "display",
                value: "grid",
                level: 0,
                selector: Some(
                    At {
                        kind: Supports,
                        query: "(display:grid)",
                        selector: None,
                        outer: [],
                        file: None,
                    },
                ),
                style_order: None,
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/react/devup-ui.css\";\nexport const grid = \"OLdisplay-vflex OHasgxa64jm8nnwwao\";\n",
}
